<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lyt_affichage_tache"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    android:background="@drawable/fond3"
    android:padding="20dp">

    <TextView
        android:id="@+id/tv_affichage_titre_tache"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="30dp"
        android:layout_weight="10"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="Titre tache"
        android:textAllCaps="true"
        android:textColor="#F8F5F5"
        android:textScaleX="1.2"
        android:textSize="20sp"
        android:textStyle="bold" />
    <LinearLayout
        android:id="@+id/lyt_lien_sport"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:orientation="horizontal"
        android:background="@drawable/cellule"
        android:padding="10dp"
        android:layout_marginBottom="20dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv_affichage_description_tache"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="description"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </ScrollView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="25"
        android:orientation="vertical"
        android:background="@drawable/cellule"
        android:padding="10dp"
        android:layout_marginBottom="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/priorite"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />
        <TextView
            android:id="@+id/tv_affichage_prio_tache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Priorité"
            android:textAlignment="textEnd"
            android:textColor="#FFFFFF" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/categorie"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />
        <TextView
            android:id="@+id/tv_affichage_categorie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Catégorie"
            android:textAlignment="textEnd"
            android:textColor="#FFFFFF" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lyt_affichage_date_creation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/dateCreation"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />
        <TextView
            android:id="@+id/tv_affichage_date_creation_tache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Date de création"
            android:textAlignment="textEnd"
            android:textColor="#FFFFFF" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lyt_affichage_date_renouv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/dateRenouvellement"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tv_affichage_date_renouvellement_tache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Date de renouvellement"
                android:textAlignment="textEnd"
                android:textColor="#FFFFFF" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/dateLimite"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />
        <TextView
            android:id="@+id/tv_affichage_date_limite_tache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Date limite"
            android:textAlignment="textEnd"
            android:textColor="#FFFFFF" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/effectue"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />
        <TextView
            android:id="@+id/tv_affichage_effectue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Effectué"
            android:textAlignment="textEnd"
            android:textColor="#FFFFFF" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tv_affichage_rappel_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/rappel"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tv_affichage_rappel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Rappel"
                android:textAlignment="textEnd"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:weightSum="10"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_affichage_modifier_tache"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="MODIFIER"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_affichage_supprimer_tache"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="SUPPRIMER"
            android:textColor="#FF0000"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lyt_affichage_btn_effectue"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:visibility="visible">

        <Button
            android:id="@+id/btn_affichage_effectue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Tache éffectuée !" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lyt_affichage_btn_renouv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="horizontal"
        android:visibility="gone">
        <Button
            android:id="@+id/btn_affichage_renouv_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Renouveller maintenant !" />

        <Button
        android:id="@+id/btn_affichage_pause"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Pause" />
    </LinearLayout>

</LinearLayout>